<resources>
    <string name="app_name">Idle Idol</string>
    <string name="managementButton_desc">Idol Management</string>
    <string name="recruitButton_desc">Recruitment</string>
    <string name="achievementButton_desc">Achievements</string>
    <string name="settingsButton_desc">Settings</string>

    <!-- <string name="app_name">My Application</string> -->
    <string name="academy_dance">Dance Academy</string>
    <string name="academy_sing">Singing Class</string>
    <string name="academy_act">Acting School</string>
    <string name="academy_lvl">Level 7</string>
    <string name="academy_slots">Occupied Slots: 3/5</string>
    <string name="work_standup">Run-down Bar Standup Routine</string>
    <string name="work_musical">Hollywood Bowl</string>
    <string name="work_reality">Reality TV Shoot</string>

    <string name="work_money1">$200 per gig</string>
    <string name="work_money2">$500 per gig</string>
    <string name="work_money3">$2000 per gig</string>
    <string name="work_duration1">Duration: 30 minutes</string>
    <string name="work_duration2">Duration: 2 hours</string>
    <string name="work_duration3">Duration: 8 hours</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
