<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <fragment
        android:id="@+id/header"
        android:name="com.example.myapplication.HeaderFragment"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="366dp"
        android:layout_height="133dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="95dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="ShowCard"
        app:srcCompat="@drawable/activity_card" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="366dp"
        android:layout_height="133dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="216dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="ShowCard"
        app:srcCompat="@drawable/activity_card" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="366dp"
        android:layout_height="133dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="334dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="ShowCard"
        app:srcCompat="@drawable/activity_card" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="240dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="225dp"
        android:layout_height="21dp"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="412dp"
        android:text="@string/work_duration1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="124dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="306dp"
        android:layout_height="21dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="236dp"
        android:text="@string/work_reality"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="73dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="232dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/work_standup" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="225dp"
        android:layout_height="21dp"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="148dp"
        android:text="@string/work_money2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="225dp"
        android:layout_height="21dp"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="268dp"
        android:text="@string/work_money3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="225dp"
        android:layout_height="21dp"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="176dp"
        android:text="@string/work_duration2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="225dp"
        android:layout_height="21dp"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="384dp"
        android:text="@string/work_money1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="225dp"
        android:layout_height="21dp"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="296dp"
        android:text="@string/work_duration3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="73dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/work_hollywoodbowl" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="306dp"
        android:layout_height="21dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="116dp"
        android:text="@string/work_musical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="73dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="116dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/work_realitytv" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="306dp"
        android:layout_height="21dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="352dp"
        android:text="@string/work_standup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="587dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/scrollbar" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="7dp"
        app:layout_constraintStart_toStartOf="@id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:srcCompat="@drawable/affinity_sing" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        app:layout_constraintEnd_toStartOf="@id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@drawable/affinity_act" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        app:layout_constraintEnd_toStartOf="@id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/affinity_act" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="37dp"
        android:layout_height="38dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="110dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/affinity_dance" />

    <Button
        android:id="@+id/home_button4"
        android:layout_width="68dp"
        android:layout_height="47dp"
        android:text="Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/academies_button4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/academies_button4"
        android:layout_width="68dp"
        android:layout_height="47dp"
        android:text="Academies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/workplace_button4"
        app:layout_constraintStart_toEndOf="@+id/home_button4" />

    <Button
        android:id="@+id/workplace_button4"
        android:layout_width="68dp"
        android:layout_height="47dp"
        android:text="Workplace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/scout_button4"
        app:layout_constraintStart_toEndOf="@+id/academies_button4" />

    <Button
        android:id="@+id/scout_button4"
        android:layout_width="68dp"
        android:layout_height="47dp"
        android:text="Scout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/management_button4"
        app:layout_constraintStart_toEndOf="@+id/workplace_button4" />

    <Button
        android:id="@+id/management_button4"
        android:layout_width="68dp"
        android:layout_height="47dp"
        android:text="Management"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/achievements_button4"
        app:layout_constraintStart_toEndOf="@+id/scout_button4" />

    <Button
        android:id="@+id/achievements_button4"
        android:layout_width="68dp"
        android:layout_height="47dp"
        android:text="Achievements"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/management_button4" />

</androidx.constraintlayout.widget.ConstraintLayout>